--- a/src/components/TotalizerArea/index.scss
+++ b/src/components/TotalizerArea/index.scss
@@ -13,7 +13,7 @@ $very-light-grayish-cyan: hsl(189, 41%, 97%);
 $white: hsl(0, 0%, 100%);
 
 @mixin large {
-    @media only screen and (min-width: 1440px) {
+    @media only screen and (min-width: 800px) {
         @content;
     }
 }
@@ -32,6 +32,7 @@ $white: hsl(0, 0%, 100%);
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        border-radius: 16px;
     }
 
     .tip-amount {
